<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">In Network Query Processing</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="createReport">Create a Report</string>
    <string name="reports">Reports</string>
    <string  name="sendReport">Send Reports</string>
    <string name="pairList">Pair List</string>
    <string name="scanList">Scan List</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="title_activity_preference">Preference</string>
    <string name="bluetoothOn">Bluetooth</string>
    <string name="title_activity_pair_devices">PairDevices</string>
    <string name="title_activity_bluetooth">Bluetooth</string>
    <string name="refresh">Refresh</string>
    <string name="About">The idea of the application is to share simulated reports between mobiles(peers). The reports have to ranked based on MALENA. The mechanism of sharing the files is based on MARKET algorithm.</string>
    <string name="Created">Anudeep</string>
    <string name="title_acitvity_about">About</string>
    
    
      <!-- BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_activity_report_list">ReportList</string>
    <string name="app">Application</string>
    <string name="loc">Location</string>
    <string name="time">Time</string>
    <string name="create">Create</string>

</resources>